# hse-multithreading-examples

./: CMakeLists.txt  README.md
homeworks/hw1. dfs/: README.md  dfs_boost  main.cpp
homeworks/hw2. apply_function/: CMakeLists.txt  README.md  apply_function.h  apply_function_benchmark.cpp  apply_function_tests.cpp
homeworks/hw3. synchronization_primitives/buffered_channel/: README.md  buffered_channel.h
homeworks/hw4. futex/: CMakeLists.txt  futex.md  futex_mutex.hpp  tests.cpp
homeworks/hw5. ips/: CMakeLists.txt  README.md  consumer.cpp  producer.cpp  protocol.h  queue.h
include/utils/: error.hpp
processes_and_threads/: CMakeLists.txt
processes_and_threads/exec/: CMakeLists.txt  dummy.cpp  exec_fd.cpp  exec_intro.cpp  writer.cpp
processes_and_threads/fork/: CMakeLists.txt  fork_cow.cpp  fork_fd.cpp  fork_intro.cpp
processes_and_threads/pthread/: CMakeLists.txt  pthread_intro.cpp
processes_and_threads/stl/: CMakeLists.txt  jthread.cpp  stl_intro.cpp
